--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CPPStudy)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(CPPStudy main.cpp Practice12/Circle.cpp Practice12/Circle.h Practice12/Point.cpp Practice12/Point.h)
+add_executable(CPPStudy main.cpp Practice12/Circle.cpp Practice12/Circle.h Practice12/Point.cpp Practice12/Point.h piggy.h heart.h tree.h LeptJSON/leptjson.cpp LeptJSON/leptjson.h)
